@@ -2993,7 +2993,7 @@ sub gst_network_get_replace_table
            [ "smbdesc",       \&gst_replace_ini,              SMB_CONF,     "global", "server string" ],
            [ "winsserver",    \&gst_replace_ini,              SMB_CONF,     "global", "wins server" ],
            [ "winsuse",       \&gst_replace_ini_bool,         SMB_CONF,     "global", "wins support" ],
-           [ "smbuse",        \&gst_service_sysv_set_status,  91, "smb" ],
+           [ "smbuse",        \&gst_service_sysv_set_status,  91, "smb", "%smbuse%" ],
            [ "dialing",       \&gst_network_dialing_set,      [WVDIAL, OLD_HASH] ],
            [ "interface",     \&gst_network_interfaces_set,		OLD_HASH ],
            [ "gateway",       \&gst_network_route_set_default_gw, "%gatewaydev%" ]
@@ -3029,7 +3029,7 @@ sub gst_network_get_replace_table
            [ "smbdesc",       \&gst_replace_ini,              SMB_CONF,     "global", "server string" ],
            [ "winsserver",    \&gst_replace_ini,              SMB_CONF,     "global", "wins server" ],
            [ "winsuse",       \&gst_replace_ini_bool,         SMB_CONF,     "global", "wins support" ],
-           [ "smbuse",        \&gst_service_sysv_set_status,  91, "smb" ],
+           [ "smbuse",        \&gst_service_sysv_set_status,  91, "smb", "%smbuse%" ],
            [ "dialing",       \&gst_network_dialing_set,      [WVDIAL, OLD_HASH] ],
            [ "interface",     \&gst_network_interfaces_set,		OLD_HASH ],
            [ "gateway",       \&gst_network_route_set_default_gw, "%gatewaydev%" ]
@@ -3069,7 +3069,7 @@ sub gst_network_get_replace_table
            [ "smbdesc",       \&gst_replace_ini,              SMB_CONF,     "global", "server string" ],
            [ "winsserver",    \&gst_replace_ini,              SMB_CONF,     "global", "wins server" ],
            [ "winsuse",       \&gst_replace_ini_bool,         SMB_CONF,     "global", "wins support" ],
-           [ "smbuse",        \&gst_service_sysv_set_status,  91, "smb" ],
+           [ "smbuse",        \&gst_service_sysv_set_status,  91, "smb", "%smbuse%" ],
            [ "dialing",       \&gst_network_dialing_set,      [WVDIAL, OLD_HASH] ],
            [ "interface",     \&gst_network_interfaces_set,		OLD_HASH ],
            [ "gateway",       \&gst_network_route_set_default_gw, "%gatewaydev%" ]
@@ -3102,7 +3102,7 @@ sub gst_network_get_replace_table
            [ "smbdesc",       \&gst_replace_ini,              SMB_CONF,    "global", "server string" ],
            [ "winsserver",    \&gst_replace_ini,              SMB_CONF,    "global", "wins server" ],
            [ "winsuse",       \&gst_replace_ini_bool,         SMB_CONF,    "global", "wins support" ],
-           [ "smbuse",        \&gst_service_sysv_set_status,  91, "smb" ],
+           [ "smbuse",        \&gst_service_sysv_set_status,  91, "smb", "%smbuse%" ],
            [ "dialing",       \&gst_network_dialing_set,      [WVDIAL, OLD_HASH] ],
            [ "interface",     \&gst_network_interfaces_set,		OLD_HASH ]
            ]
@@ -3139,7 +3139,7 @@ sub gst_network_get_replace_table
         [ "smbdesc",       \&gst_replace_ini,              SMB_CONF,     "global", "server string" ],
         [ "winsserver",    \&gst_replace_ini,              SMB_CONF,     "global", "wins server" ],
         [ "winsuse",       \&gst_replace_ini_bool,         SMB_CONF,     "global", "wins support" ],
-        [ "smbuse",        \&gst_service_sysv_set_status,  20, "smb" ],
+        [ "smbuse",        \&gst_service_sysv_set_status,  20, "smb", "%smbuse%" ],
         [ "interface",     \&gst_network_suse70_set_ppp,   [WVDIAL, "%dialing%"] ],
         [ "dialing",       \&gst_network_dialing_set,      [WVDIAL, OLD_HASH] ],
 # We're calling this sepparated cuz we are going to call wvdial to activate.           
@@ -3178,7 +3178,7 @@ sub gst_network_get_replace_table
            [ "smbdesc",       \&gst_replace_ini,              SMB_CONF,     "global", "server string" ],
            [ "winsserver",    \&gst_replace_ini,              SMB_CONF,     "global", "wins server" ],
            [ "winsuse",       \&gst_replace_ini_bool,         SMB_CONF,     "global", "wins support" ],
-           [ "smbuse",        \&gst_service_sysv_set_status,  91, "smb" ],
+           [ "smbuse",        \&gst_service_sysv_set_status,  91, "smb", "%smbuse%" ],
            [ "dialing",       \&gst_network_dialing_set,      [WVDIAL, OLD_HASH] ],
            [ "interface",     \&gst_network_interfaces_set,		OLD_HASH ],
            [ "gateway",       \&gst_network_route_set_default_gw, "%gatewaydev%" ]
